# CommunicatorCommon

./: .gitignore  README.md  dev_requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  docs.yaml  static.yml
CommunicatorCommon/: Communicator.py  I2CCommunicator.py  SerialCommunicator.py
CommunicatorCommon/src/: Auditory.py  CommunicatorEvent.py  Constants.py  Event.py  I2CSpec.py  SerialSpec.py
CommunicatorCommon/src/exceptions/: SerialCommunicationError.py  SerialCommunicationException.py  SerialPortSetupError.py
docs/: CommunicatorCommon  Makefile
docs/docs_build/doctrees/: environment.pickle  index.doctree
docs/docs_build/doctrees/src/: i2c.doctree  serial.doctree
docs/docs_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/docs_build/html/_sources/: index.rst.txt
docs/docs_build/html/src/: i2c.html  serial.html
docs/source/: conf.py
docs/source/src/: i2c.rst  serial.rst
scripts/: build_docs.sh
src/CommunicatorCommon/: I2CCommunicator.py  SerialCommunicator.py  __init__.py  i2c_communicator.py  serial_communicator.py
src/CommunicatorCommon/exceptions/: SerialPortSetupException.py
test/: test_Auditory.py  test_Communicators.py
tests/: CommunicatorCommon  test_I2CCommunicator.py  test_SerialCommunicator.py  test_i2c_communicator.py  test_serial_communicator.py
