[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "CommunicatorCommon"
version = "1.2.0"
authors = [{ name = "Jarred" }]
description = "Common Package for robotic communication"
readme = "README.md"
keywords = []
license = { text = "GPL-3.0" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["smbus2", "pyserial"]
